--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,15 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "Debug Local File",
+            "name": "Debug picture-mover.rb",
             "type": "Ruby",
             "request": "launch",
             "cwd": "${workspaceRoot}",
-            "program": "${workspaceRoot}/main.rb"
+            "program": "${workspaceRoot}/picture-mover.rb",
+            "args": ["-s ./test/source", "-d ./test/destination", "-g"],
+            "showDebuggerOutput": true
         },
         {
             "name": "Listen for rdebug-ide",
@@ -19,6 +22,7 @@
         },
         {
             "name": "Rails server",
+            
             "type": "Ruby",
             "request": "launch",
             "cwd": "${workspaceRoot}",
